# FileHasher

./: CMakeLists.txt  LICENSE  README.md
include/: ArgParser.hpp  Configuration.hpp  FileHasher.hpp  Runner.hpp
include/hasher/: IHasher.hpp  MD5Hasher.hpp
include/reader/: IReader.hpp  MemoryReader.hpp
include/types/: BaseChunk.hpp  BufferedChunk.hpp  IChunk.hpp  MemoryChunk.hpp
include/writer/: IWriter.hpp  MemoryWriter.hpp
src/: ArgParser.cpp  FileHasher.cpp  Runner.cpp  main.cpp
src/hasher/: MD5Hasher.cpp
src/reader/: MemoryReader.cpp
src/writer/: MemoryWriter.cpp
